# collections-query

./: .dev.env  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-manual-build.yml  docker-publish.yml  docker-test-builds.yml
container/: Containerfile
entities/: Cargo.toml
entities/src/: collections.rs  entries.rs  entry_boolean_values.rs  entry_date_time_values.rs  entry_number_list_values.rs  entry_number_values.rs  entry_object_values.rs  entry_relation_values.rs  entry_text_list_values.rs  entry_text_values.rs  entry_typst_text_values.rs  fields.rs  lib.rs  main.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
src/: auth.rs  main.rs  state.rs
src/schema/: mod.rs  query.rs
src/schema/objects/: collection.rs  entries.rs  mod.rs
