[workspace]
members = [".", "entities"]

[package]
name = "collections-query"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "query"] }
derive_more = { version = "2.0.1", features = ["display", "error"] }
juniper ={version = "0.16.2", features = ["chrono", "uuid"]}
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid" ] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
anyhow = "1.0.98"
entities = { path = "entities" }
reqwest = { version = "0.12.20", features = ["json"] }
once_cell = "1.19.0"
bytes = "1.10.1"
jsonwebtoken = "9.3.1"
typst-as-lib = {version = "0.14.4", features = ["typst-html"]}
typst-html = "0.13.1"
juniper_axum = "0.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
